--- a/myapp/src/components/create.css
+++ b/myapp/src/components/create.css
@@ -1,79 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'poppins',sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: "Merriweather Sans", sans-serif;
 }
-.form-box{
-    position: relative;
-    width: 60%;
-    min-height: 70vh;
-    background: rgba(1, 196, 255, 0.2);
-    border: 2px solid rgba(234, 1, 255, 0.5);
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  background-color: #b0dbee;
+}
+#form {
+  color: white;
+  background-color: #15ade9;
+  border-radius: 5px;
 
+  width: 400px;
+  padding: 40px;
+  margin: 150px auto;
+
+  -webkit-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
 }
-h2{
-    font-size: 2em;
-    color: #030303;
-    text-align: center;
-}
-.inputbox{
-    position: relative;
-    margin: 30px 0;
-    width: auto;
-    border-bottom: 2px solid rgba(234, 1, 255, 0.5);
-}
-.inputbox label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    color: rgb(0, 0, 0);
-    font-size: 1em;
-    pointer-events: none;
-    transition: .5s;
-}
-input:focus ~ label,
-input:valid ~ label{
-top: -5px;
-}
-.inputbox input {
-    width: 100%;
-    height: 50px;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    padding:0 35px 0 5px;
-    color: #000000;
-}
-.inputbox ion-icon{
-    position: absolute;
-    right: 8px;
-    color: #fff;
-    font-size: 1.2em;
-    top: 20px;
-}
-button{
-    position: relative;
-    width: 20%;
-    height: 40px;
-    border-radius: 20px;
-    background: rgba(54, 54, 54, 0.082);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 600;
-    color: rgba(234, 1, 255, 0.5);
+p {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
 }
 
-.logo{
-        /* width: 10px;
-        height: 10px; */
-    padding-left: 50px;
+.bttn {
+  width: 100%;
+  text-align: center;
+  color: grey;
+  margin-top: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.form-group {
+  margin: 15px auto;
+}
+label {
+  font-weight: bold;
+  font-size: 0.9em;
+}
+
+.input-group {
+  border-radius: 5px;
+  -webkit-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+}
+.input-group-addon {
+  border: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+input {
+  padding-left: 10px;
+}
+
+i {
+  color: #009edf;
+}
+
+input {
+  padding: 3px;
+  width: 100%;
+  border: none;
+  border-radius: 0 5px 5px 0;
 }
